--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_exploits">Exploits</string>
     <string name="menu_slideshow">Past Reports</string>
+    <string name="menu_hostscanner">Host Scanner</string>
 </resources>
