Lots of polishing/setup
Polished/refactored the home fragment

Set up a skeleton/loose functionality to be able to share the reports externally via Gmail or GDrive.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="exploit_proftpd">ProFTPd</string>
 
     <string name="reports_empty">No exploit engagements have been made.</string>
+    <string name="success">Success</string>
+    <string name="incomplete">Incomplete</string>
+    <string name="failure">Failure</string>
+    <string name="exploit_engagement_history">Exploit Engagement History</string>
 </resources>
