--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="incomplete">Incomplete</string>
     <string name="failure">Failure</string>
     <string name="exploit_engagement_history">Exploit Engagement History</string>
+    <string name="touch_pocfile">`touch PoCFile`</string>
+    <string name="netatalk_description">The Apple Filing Protocol (AFP) server running on the remote host is affected by a remote code execution vulnerability due to a buffer overflow condition when handling an OpenSession request. \n\nAn unauthenticated, remote attacker can exploit this issue, via a specially crafted message, to execute arbitrary code.</string>
+    <string name="open_unauthorized_session">Open unauthorized session</string>
+    <string name="parameters">Parameters</string>
+    <string name="ip_address">IP Address</string>
+    <string name="exploit">Exploit</string>
 </resources>
