--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="exploit_engagement_history">Exploit Engagement History</string>
     <string name="touch_pocfile">`touch PoCFile`</string>
     <string name="netatalk_description">The Apple Filing Protocol (AFP) server running on the remote host is affected by a remote code execution vulnerability due to a buffer overflow condition when handling an OpenSession request. \n\nAn unauthenticated, remote attacker can exploit this issue, via a specially crafted message, to execute arbitrary code.</string>
-    <string name="open_unauthorized_session">Open unauthorized session</string>
+    <string name="list_volumes">List volumes</string>
+    <string name="list_all_vol_content">List all volume content</string>
     <string name="parameters">Parameters</string>
     <string name="ip_address">IP Address</string>
     <string name="exploit">Exploit</string>
